# test-cargo-config-deps

depends/: Cargo.toml
depends/src/: main.rs
pathdep/: Cargo.toml
