[package]
name = "depends"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdep = { path = "../pathdep" }
gitdep = { git = "https://github.com/thomcc/test-cargo-config-gitdep", branch = "main" }
